Tue Nov 13 23:48:25 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/matrixw.[ch], src/calc.c, src/funclib.c, src/matop.c,
	  src/symbolic.c, src/compil.c, src/eval.c: Optimized / cleaned up
	  certain matrix operations a tiny bit.  Consistently traverse
	  matrices row wise.

	* src/funclib.c, src/eval.c: Fixed and slightly optimized IsIn,
	  it used to bomb if the first argument was a matrix, and it
	  used to think that the object "true" is equal to any number,
	  and further it didn't see a difference between numbers of
	  different types (float vs. integer).  This fixes also Intersection,
	  Union, MakeSet and SetMinus.  Also added IsSubset.  Also fixed
	  symbolic tree comparison for matrices.

	* src/mpwrap.c: When printing out a floating point number, make sure
	  to append ".0" to the end to distinguish it from an integer

	* src/geniustests.txt:  updated tests, added many new tests.

	* help/C/gel-function-list.xml: updated

	* NEWS: update

Sun Nov 11 03:17:49 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: translate the author fields in the about box
	  and set the program name correctly

Sun Nov 11 03:07:04 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: there was a stupid string to translate

Sun Nov 11 00:14:04 2007  Jiri (George) Lebl <jirka@5z.com>

	* pixmaps/Makefile.am: add genius-graph.png to EXTRA_DIST

	* src/funclib.c: Implement DividePoly to divide polynomials
	  using long division.  This was one of those things that
	  I set aside to do "tommorrow" and it took close to a decade.

	* help/C/gel-function-list.xml: document DividePoly

	* configure.in: require GTK+ 2.4 (not 2.3.5 as previously)

	* NEWS: update

Sat Nov 10 16:58:14 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: migrate to GtkFontButton and add website addy
	  to about box

Sat Nov 10 16:22:09 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: optionally use GtkAboutDialog if we have GTK
	2.6 and higher
