@@ -1,3 +1,12 @@
+Wed Nov 14 03:45:42 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/matop.c, src/symbolic.c, src/mpwrap.[ch], src/calc.c,
+	  src/funclib.c, src/eval.c: Significantly improve both
+	  memory usage and speed in matrix multiplication and to some degree
+	  Gaussian elimination in case there are a lot of zero entries.
+
+	* src/geniustests.txt: update
+
 Tue Nov 13 23:48:25 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/matrixw.[ch], src/calc.c, src/funclib.c, src/matop.c,
